Implement add project endpoint
